--- a/MediaExtractor/App.xaml
+++ b/MediaExtractor/App.xaml
@@ -1,9 +1,14 @@
-﻿<Application x:Uid="Application_1" x:Class="MediaExtractor.App"
+﻿<Application x:Class="MediaExtractor.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:MediaExtractor"
-             StartupUri="MainWindow.xaml">
+             xmlns:System="clr-namespace:System;assembly=mscorlib" >
+    <!--  StartupUri="MainWindow.xaml"> -->
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="pack://application:,,,/AdonisUI;component/ColorSchemes/Light.xaml"/>
+                <ResourceDictionary Source="pack://application:,,,/AdonisUI.ClassicTheme;component/Resources.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
